<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8AF8342"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="60dp"
        android:text="@string/game_start"
        android:textSize="38sp" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:columnCount="3">


        <!-- Кнопки от 1 до 9 -->
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <!-- Аналогичные кнопки для чисел от 2 до 9 с отступами -->
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onNumberButtonClick"
            android:text="@string/_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/_6"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/_7"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/_9"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="UsingOnClickInXml" />

        <!-- Кнопка инфо -->
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onNumberButtonClick"
            android:text="@string/info_button"
            tools:ignore="UsingOnClickInXml" />


    </GridLayout>


</LinearLayout>
